--- a/mTime/package.json
+++ b/mTime/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "fastclick": "^1.0.6",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
+    "vuex": "^2.4.0",
     "vux": "^2.5.10",
     "vux-loader": "^1.1.5"
   },
