--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "better-scroll": "^1.2.6",
     "bootstrap": "^3.3.7",
     "fastclick": "^1.0.6",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
+    "mint-ui": "^2.2.9",
+    "muse-ui": "^2.1.0",
+    "pinyin": "^2.8.3",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
+    "vue-scroller": "^2.2.2",
+    "vue-spinner": "^1.0.2",
     "vuex": "^2.4.0",
     "vux": "^2.5.10",
     "vux-loader": "^1.1.5"
@@ -28,7 +34,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chalk": "^2.0.1",
+    "chalk": "^2.1.0",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
